fixed an alignment issue

--- a/UI-prototypes/TrackModelUI/styles.css
+++ b/UI-prototypes/TrackModelUI/styles.css
@@ -44,6 +44,7 @@
 	height: 100%;
 	border: 3px solid grey;
 	position: relative;
+	vertical-align: top;
 }
 .load input {
 	width: 90%;
